handle invalid user case

--- a/views/html/signup.html
+++ b/views/html/signup.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    
+    <!--MDB-->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.css" rel="stylesheet"/>
     <title>signup</title>
     <style>
         body{
@@ -17,15 +19,14 @@
 
 </head>
 <body>
-    <section>
+    <section class="vh-100">
     <div class="mask d-flex align-items-center h-100 gradient-custom-3">
     <div class="container h-100">
         <div class="row d-flex justify-content-center align-items-center h-100" >
             <div class="col-12 col-md-9 col-lg-7 col-xl-6">
                 <div class="card" style="border-radius: 15px;">
-                    <div class="card-body p-5">
+                    <div class="card-body p-4">
                         <h2 class="text-uppercase text-center mb-5">Create an account</h2>
-
                         <form id="signUpForm" action="/user/signUp">
 
                             <div class="form-outline mb-4" >
@@ -47,10 +48,13 @@
                                 <button type="submit" class="btn btn-success btn-block btn-lg gradient-custom-4 text-body">Register</button>
                             </div>
 
-                            <p class="text-center text-muted mt-5 mb-0">Have already an account? <a href="/user/signIn"
+                            <p class="text-center text-muted mt-5 mb-0">Have already an account? <a href="signIn.html"
                                 class="fw-bold text-body"><u>Login here</u></a></p>
                         </form>
 
+                    </div>
+                    <div id="errorDiv "class="error d-flex justify-content-center" style="color: red;">
+                        <h3 id="errorText" style="border-bottom: 1px solid;"></h3>
 
                     </div>
 
@@ -64,28 +68,13 @@
     </div>
     </div>
 </section>
+
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"></script>
-<script>
-    const form=document.querySelector('#signUpForm');
-    form.addEventListener('submit',(e)=>{
-        e.preventDefault();
-        const name=document.getElementById('userName').value;
-        const email=document.getElementById('userEmail').value;
-        const password=document.getElementById('userPassword').value;
-
-        const userDetail={name:name,email:email,password:password};
-        console.log(userDetail);
-
-        axios.post('http://localhost:2000/user/signUp',userDetail).then((result)=>{
-            console.log(result);
-        }).catch((err)=>{console.log(err);})
-
-
-
-
-    })
-   
-</script>
+<script type="text/javascript"src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.js"></script>
+<script  src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    
+<script src="../js/signUp.js"></script>
 
 </body>
 </html>
