done with autorization

--- a/views/html/addExpense.html
+++ b/views/html/addExpense.html
@@ -70,7 +70,11 @@
                 
             </form>
         </table>
-        <ul id="expenseList" class="list-group list-group-numbered"></ul>
+        <div id="listDiv" class="w-100 m-5"style="font-size: larger; color: blue;" >
+            <ul id="expenseList" class="list-group list-group-numbered"></ul>
+
+        </div>
+        
     </div>
 </body>
 
