--- a/views/html/addExpense.html
+++ b/views/html/addExpense.html
@@ -77,6 +77,7 @@
             <ul id="expenseList" class="list-group list-group-numbered"></ul>
 
         </div>
+        <div id="leaderBoard"></div>
         
     </div>
 </body>
