forget password added

--- a/views/html/addExpense.html
+++ b/views/html/addExpense.html
@@ -73,6 +73,7 @@
                 
             </form>
         </table>
+        <div id="showLeaderShipButton"></div>
         <div id="listDiv" class="w-100 m-5"style="font-size: larger; color: blue;" >
             <ul id="expenseList" class="list-group list-group-numbered"></ul>
 
