--- a/views/html/login.html
+++ b/views/html/login.html
@@ -37,20 +37,22 @@
                                 <input type="password" id="userPassword" name="password"class="form-control form-control-lg" required>
                                 <label class="form-label" for="forUserPassword">Enter Your password</label>
                             </div>
+                            
 
                             <div class="d-flex justify-content-center">
                                 <button type="submit" class="btn btn-success btn-block btn-lg gradient-custom-4 text-body">Login</button>
+                            </div >
+                            <div id="errorDiv "class="error d-flex justify-content-center" style="color: red;">
+                                <h3 id="errorText" style="border-bottom: 1px solid;"></h3>
+        
                             </div>
-
-                            <p class="text-center text-muted mt-5 mb-0">New User ? <a href="signup.html"
-                                class="fw-bold text-body"><u>Sign Up here</u></a></p>
                         </form>
-
+                        <p class="text-center text-muted mt-5 mb-0">New User ? <a href="signup.html"
+                            class="fw-bold text-body"><u>Sign Up here</u></a></p>
                     </div>
-                    <div id="errorDiv "class="error d-flex justify-content-center" style="color: red;">
-                        <h3 id="errorText" style="border-bottom: 1px solid;"></h3>
-
-                    </div>
+                   
+                    <div class="d-flex justify-content-center" > <a href="./forgetPassword.html" class="btn  " role="button">Forget Password</a></div>
+                    
 
                 </div>
             </div>
