--- a/views/html/forgetPassword.html
+++ b/views/html/forgetPassword.html
@@ -28,7 +28,7 @@
                   <p class="mb-2">Enter your registered email ID to reset the password
                   </p>
                 </div>
-                <form>
+                <form id="forgetPassword_form">
                   <div class="mb-3">
                     <label for="email" class="form-label">Email</label>
                     <input type="email" id="forgetPasswordEmail" class="form-control" name="email" placeholder="Enter Your Email"
@@ -41,6 +41,10 @@
                   </div>
                   <span>Don't have an account? <a href="./signup.html">sign in</a></span>
                 </form>
+                <div id="errorDiv "class="error d-flex justify-content-center" style="color: red;">
+                    <h3 id="errorText" style="border-bottom: 1px solid;"></h3>
+
+                </div>
               </div>
             </div>
           </div>
@@ -51,17 +55,22 @@
 <script  src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
  
 <script>
-
-var forgetBtn=document.getElementById('forgetPasswordBtn');
-var email=document.getElementById('forgetPasswordEmail').value;
-console.log(email);
-forgetBtn.addEventListener('click',()=>{
-    axios.post('http://localhost:4000/password/forgetPassword',email).then((res)=>{
-        console.log(res);
+const form=document.getElementById('forgetPassword_form');
+form.addEventListener('submit',(e)=>{
+    e.preventDefault();
+    var emailId=document.getElementById('forgetPasswordEmail').value;
+    axios.post('http://localhost:4000/password/forgetPassword',{emailId}).then((res)=>{
+       
+      if(res.status===201){
+        alert('Reset Password link is send to registered email');
+        window.location.href='./login.html'
+      }
     }).catch((err)=>{
-        console.log(err)
-    });
-})
+      if(err.response.status===401)
+            document.getElementById('errorText').innerHTML=`${err.response.data.message}`
+    
+  });
+});
 
 </script>
 </body>
