--- a/views/html/forgetPassword.html
+++ b/views/html/forgetPassword.html
@@ -56,18 +56,21 @@
  
 <script>
 const form=document.getElementById('forgetPassword_form');
-form.addEventListener('submit',(e)=>{
+form.addEventListener('submit',async (e)=>{
     e.preventDefault();
     var emailId=document.getElementById('forgetPasswordEmail').value;
-    axios.post('http://localhost:4000/password/forgetPassword',{emailId}).then((res)=>{
-       
+     axios.post('http://localhost:4000/password/forgetPassword',{emailId}).then((res)=>{
       if(res.status===201){
+        localStorage.setItem('uuid',res.data.id)
         alert('Reset Password link is send to registered email');
         window.location.href='./login.html'
       }
     }).catch((err)=>{
       if(err.response.status===401)
-            document.getElementById('errorText').innerHTML=`${err.response.data.message}`
+      alert('user is not registered ');
+      document.getElementById('forgetPasswordEmail').value="";
+
+            
     
   });
 });
