reset password with send grid

--- a/views/html/resetPassword.html
+++ b/views/html/resetPassword.html
@@ -62,12 +62,15 @@
             e.preventDefault();
             var emailId=document.getElementById('userEmail')
             var password=document.getElementById('userPassword')
+            const url=window.location.href;
+            const uuid=url.split('/')[5];
+            console.log("uuid "+uuid);
             const data={
                 emailId:document.getElementById('userEmail').value,
                 password:document.getElementById('userPassword').value,
-                id:localStorage.getItem('uuid')
+                id:uuid,
                 
-
+                
             }
 
             axios.post('http://localhost:4000/password/updatePassword',{data}).then((res)=>{
