--- a/views/html/addExpense.html
+++ b/views/html/addExpense.html
@@ -16,9 +16,9 @@
         table{
             background: wheat;
         }
-        #premiumFront{
+        /* #premiumFront{
             background: wheat;
-        }
+        } */
         #nav_bar_a{
             color: crimson;
         }
@@ -105,7 +105,7 @@
 
                     <button class=" btn btn-outline-black"id="downloadExpense">Download</button>
                 </div>
-            </nav> -->
+            </nav> 
             <div id="monthlyExpense"class="container">
                <h3 >  Monthly Expense</h3>
                 <table class="table table-bordered caption-top border border-2 border-dark pt-5">
@@ -139,7 +139,8 @@
                 </tbody>
             </table>
         </div>
-        <div class=" d-flex flex-row-reverse ">
+        -->
+        <div id="downloadExpenseDiv">
             <button id="downloadExpense" onclick="downloadFile()" class="btn  btn-outline-primary ">Download Expense</button>
         </div>
 
