dynamic pagination done

--- a/views/html/addExpense.html
+++ b/views/html/addExpense.html
@@ -94,11 +94,21 @@
         </div>
 
         <div id="pagination"></div>
+        <div id="expensePerPage">
+            <label for="rows" >Expenses Per Page</label>
+            <select name="rows" id="expensePage">
+                <option value="5">5</option>
+                <option value="10">10</option>
+                <option value="20">20</option>
+                <option value="50">50</option>
+            </select>
+            <button id="setRows">Set</button>
+        </div>
         <div id="leaderBoard"></div>
 
 
         <section id="premiumFront"  style="display: none;">
-        <div id="downloadExpenseDiv">
+        <div id="downloadExpenseDiv" style="padding:20px">
             <button id="downloadExpense" onclick="downloadFile()" class="btn  btn-outline-primary ">Download Expense</button>
         </div>
 
