front end DEPLOYMENT

--- a/views/expense/addExpense.html
+++ b/views/expense/addExpense.html
@@ -229,7 +229,7 @@
   </body>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"></script>
-  <script src="../js/expense.js"></script>
+  <script src="expense.js"></script>
 
   <!--razorpay-->
   <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
