--- a/views/forgetpassword/forgetPassword.html
+++ b/views/forgetpassword/forgetPassword.html
@@ -39,7 +39,7 @@
                       Reset Password
                     </button>
                   </div>
-                  <span>Don't have an account? <a href="./signup.html">sign in</a></span>
+                  <span>Don't have an account? <a href="../signup/signup.html">sign in</a></span>
                 </form>
                 <div id="errorDiv "class="error d-flex justify-content-center" style="color: red;">
                     <h3 id="errorText" style="border-bottom: 1px solid;"></h3>
@@ -62,7 +62,7 @@ form.addEventListener('submit',async (e)=>{
      axios.post('http://localhost:4000/password/forgetPassword',{emailId}).then((res)=>{
       if(res.status===202){
         alert('Reset Password link is send to registered email');
-        window.location.href='./login.html'
+        window.location.href='../login/login.js'
       }
     }).catch((err)=>{
       if(err.response.status===401)
