--- a/views/login/login.html
+++ b/views/login/login.html
@@ -47,11 +47,11 @@
         
                             </div>
                         </form>
-                        <p class="text-center text-muted mt-5 mb-0">New User ? <a href="signup.html"
+                        <p class="text-center text-muted mt-5 mb-0">New User ? <a href="../signup/signup.html"
                             class="fw-bold text-body"><u>Sign Up here</u></a></p>
                     </div>
                    
-                    <div class="d-flex justify-content-center" > <a href="./forgetPassword.html" class="btn  " role="button">Forget Password</a></div>
+                    <div class="d-flex justify-content-center" > <a href="../forgetpassword/forgetPassword.html" class="btn  " role="button">Forget Password</a></div>
                     
 
                 </div>
@@ -70,7 +70,7 @@
 <script type="text/javascript"src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.js"></script>
 <script  src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     
-<script src="../js/login.js"></script>
+<script src="login.js"></script>
 
 </body>
 </html>
