--- a/views/signup/signup.html
+++ b/views/signup/signup.html
@@ -48,7 +48,7 @@
                                 <button type="submit" class="btn btn-success btn-block btn-lg gradient-custom-4 text-body">Register</button>
                             </div>
 
-                            <p class="text-center text-muted mt-5 mb-0">Have already an account? <a href="login.html"
+                            <p class="text-center text-muted mt-5 mb-0">Have already an account? <a href="../Login/login.html"
                                 class="fw-bold text-body"><u>Login here</u></a></p>
                         </form>
 
@@ -74,7 +74,7 @@
 <script type="text/javascript"src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.js"></script>
 <script  src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     
-<script src="../js/signUp.js"></script>
+<script src="signUp.js"></script>
 
 </body>
 </html>
