--- a/views/forgetpassword/forgetPassword.html
+++ b/views/forgetpassword/forgetPassword.html
@@ -59,7 +59,7 @@ const form=document.getElementById('forgetPassword_form');
 form.addEventListener('submit',async (e)=>{
     e.preventDefault();
     var emailId=document.getElementById('forgetPasswordEmail').value;
-     axios.post('http://localhost:4000/password/forgetPassword',{emailId}).then((res)=>{
+     axios.post('https://13.233.61.14:3306/password/forgetPassword',{emailId}).then((res)=>{
       if(res.status===202){
         alert('Reset Password link is send to registered email');
         window.location.href='../login/login.js'
