--- a/views/login.html
+++ b/views/login.html
@@ -8,7 +8,7 @@
     
     <!--MDB-->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.css" rel="stylesheet"/>
-    <title>signup</title>
+    <title>Login</title>
     <style>
         body{
             background: linear-gradient(to right, rgba(132, 250, 176, 1), rgba(143, 211, 244, 1))
@@ -26,37 +26,33 @@
             <div class="col-12 col-md-9 col-lg-7 col-xl-6">
                 <div class="card" style="border-radius: 15px;">
                     <div class="card-body p-4">
-                        <h2 class="text-uppercase text-center mb-5">Create an account</h2>
-                        <form id="signUpForm" action="/user/signUp">
-
+                        <h2 class="text-uppercase text-center mb-5">Login Here</h2>
+                        <form id="login" action="/user/login">
                             <div class="form-outline mb-4" >
-                                <input type="text" id="userName" name="user_name"class="form-control form-control-lg" required>
-                                <label class="form-label" for="forUserName">Enter Your Name</label>
-                            </div>
-
-                            <div class="form-outline mb-4" >
-                                <input type="email" id="userEmail" name="user_email" class="form-control form-control-lg" required>
+                                <input type="email" id="userEmail" name="email" class="form-control form-control-lg" required>
                                 <label class="form-label" for="forUserEmail">Enter Your Email</label>
                             </div>
 
                             <div class="form-outline mb-4" >
-                                <input type="password" id="userPassword" name="user_password"class="form-control form-control-lg" required>
+                                <input type="password" id="userPassword" name="password"class="form-control form-control-lg" required>
                                 <label class="form-label" for="forUserPassword">Enter Your password</label>
                             </div>
+                            
 
                             <div class="d-flex justify-content-center">
-                                <button type="submit" class="btn btn-success btn-block btn-lg gradient-custom-4 text-body">Register</button>
+                                <button type="submit" class="btn btn-success btn-block btn-lg gradient-custom-4 text-body">Login</button>
+                            </div >
+                            <div id="errorDiv "class="error d-flex justify-content-center" style="color: red;">
+                                <h3 id="errorText" style="border-bottom: 1px solid;"></h3>
+        
                             </div>
-
-                            <p class="text-center text-muted mt-5 mb-0">Have already an account? <a href="login.html"
-                                class="fw-bold text-body"><u>Login here</u></a></p>
                         </form>
-
+                        <p class="text-center text-muted mt-5 mb-0">New User ? <a href="./signup.html"
+                            class="fw-bold text-body"><u>Sign Up here</u></a></p>
                     </div>
-                    <div id="errorDiv "class="error d-flex justify-content-center" style="color: red;">
-                        <h3 id="errorText" style="border-bottom: 1px solid;"></h3>
-
-                    </div>
+                   
+                    <div class="d-flex justify-content-center" > <a href="./forgetPassword.html" class="btn  " role="button">Forget Password</a></div>
+                    
 
                 </div>
             </div>
@@ -74,7 +70,7 @@
 <script type="text/javascript"src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.js"></script>
 <script  src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     
-<script src="../js/signUp.js"></script>
+<script src="./login.js"></script>
 
 </body>
 </html>
