--- a/views/forgetPassword.html
+++ b/views/forgetPassword.html
@@ -59,7 +59,7 @@ const form=document.getElementById('forgetPassword_form');
 form.addEventListener('submit',async (e)=>{
     e.preventDefault();
     var emailId=document.getElementById('forgetPasswordEmail').value;
-     axios.post('https://13.127.148.238:4000/password/forgetPassword',{emailId}).then((res)=>{
+     axios.post('http://13.232.221.44:4000/password/forgetPassword',{emailId}).then((res)=>{
       if(res.status===202){
         alert('Reset Password link is send to registered email');
         window.location.href='./login.html'
