--- a/views/forgetPassword.html
+++ b/views/forgetPassword.html
@@ -1,79 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"><link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
+
     <!--MDB-->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.css" rel="stylesheet"/>
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.css"
+      rel="stylesheet"
+    />
     <title>Forget Password</title>
     <style>
-        body{
-            background: linear-gradient(to right, rgba(132, 250, 176, 1), rgba(143, 211, 244, 1))
-        }
-        
+      body {
+        background: linear-gradient(
+          to right,
+          rgba(132, 250, 176, 1),
+          rgba(143, 211, 244, 1)
+        );
+      }
     </style>
-</head>
-<body>
-
+  </head>
+  <body>
     <div class="container d-flex flex-column">
-        <div class="row align-items-center justify-content-center
-            min-vh-100 g-0">
-          <div class="col-12 col-md-8 col-lg-4 border-top border-3 border-primary">
-            <div class="card shadow-sm">
-              <div class="card-body">
-                <div class="mb-4">
-                  <h5>Forgot Password?</h5>
-                  <p class="mb-2">Enter your registered email ID to reset the password
-                  </p>
+      <div class="row align-items-center justify-content-center min-vh-100 g-0">
+        <div
+          class="col-12 col-md-8 col-lg-4 border-top border-3 border-primary"
+        >
+          <div class="card shadow-sm">
+            <div class="card-body">
+              <div class="mb-4">
+                <h5>Forgot Password?</h5>
+                <p class="mb-2">
+                  Enter your registered email ID to reset the password
+                </p>
+              </div>
+              <form id="forgetPassword_form">
+                <div class="mb-3">
+                  <label for="email" class="form-label">Email</label>
+                  <input
+                    type="email"
+                    id="forgetPasswordEmail"
+                    class="form-control"
+                    name="email"
+                    placeholder="Enter Your Email"
+                    required=""
+                  />
                 </div>
-                <form id="forgetPassword_form">
-                  <div class="mb-3">
-                    <label for="email" class="form-label">Email</label>
-                    <input type="email" id="forgetPasswordEmail" class="form-control" name="email" placeholder="Enter Your Email"
-                      required="">
-                  </div>
-                  <div class="mb-3 d-grid">
-                    <button  id="forgetPasswordBtn" type="submit" class="btn btn-primary">
-                      Reset Password
-                    </button>
-                  </div>
-                  <span>Don't have an account? <a href="./signup.html">sign in</a></span>
-                </form>
-                <div id="errorDiv "class="error d-flex justify-content-center" style="color: red;">
-                    <h3 id="errorText" style="border-bottom: 1px solid;"></h3>
-
+                <div class="mb-3 d-grid">
+                  <button
+                    id="forgetPasswordBtn"
+                    type="submit"
+                    class="btn btn-primary"
+                  >
+                    Reset Password
+                  </button>
                 </div>
+                <span
+                  >Don't have an account?
+                  <a href="./signup.html">sign in</a></span
+                >
+              </form>
+              <div
+                id="errorDiv "
+                class="error d-flex justify-content-center"
+                style="color: red"
+              >
+                <h3 id="errorText" style="border-bottom: 1px solid"></h3>
               </div>
             </div>
           </div>
         </div>
       </div>
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"></script>
-<script type="text/javascript"src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.js"></script>
-<script  src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
- 
-<script>
-const form=document.getElementById('forgetPassword_form');
-form.addEventListener('submit',async (e)=>{
-    e.preventDefault();
-    var emailId=document.getElementById('forgetPasswordEmail').value;
-     axios.post('http://13.232.221.44:4000/password/forgetPassword',{emailId}).then((res)=>{
-      if(res.status===202){
-        alert('Reset Password link is send to registered email');
-        window.location.href='./login.html'
-      }
-    }).catch((err)=>{
-      if(err.response.status===401)
-      alert('user is not registered ');
-      document.getElementById('forgetPasswordEmail').value="";
+    <script
+      type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.js"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+      crossorigin="anonymous"
+    ></script>
 
-            
-    
-  });
-});
-
-</script>
-</body>
+    <script>
+      const form = document.getElementById("forgetPassword_form");
+      form.addEventListener("submit", async (e) => {
+        e.preventDefault();
+        var emailId = document.getElementById("forgetPasswordEmail").value;
+        axios
+          .post("http://3.111.53.105:4000/password/forgetPassword", { emailId })
+          .then((res) => {
+            if (res.status === 202) {
+              alert("Reset Password link is send to registered email");
+              window.location.href = "./login.html";
+            }
+          })
+          .catch((err) => {
+            if (err.response.status === 401) alert("user is not registered ");
+            document.getElementById("forgetPasswordEmail").value = "";
+          });
+      });
+    </script>
+  </body>
 </html>
