--- a/views/forgetPassword.html
+++ b/views/forgetPassword.html
@@ -96,7 +96,9 @@
         e.preventDefault();
         var emailId = document.getElementById("forgetPasswordEmail").value;
         axios
-          .post("http://3.111.53.105:4000/password/forgetPassword", { emailId })
+          .post("http://15.206.80.195:4000/password/forgetPassword", {
+            emailId,
+          })
           .then((res) => {
             if (res.status === 202) {
               alert("Reset Password link is send to registered email");
